@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-03
+2012-03-27 Andy Salnikov
+- upgrade to pdsdata V03-04-01
+- new class bld.BldDataEBeamV3
+
 Tag: V00-02-02
 2012-03-14 Andy Salnikov
 - upgrade to pdsdata V03-03-01A
